--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = "0.11"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+sha1 = "0.10.1"
 tokio = { version = "1.17", default-features = false, features = ["macros", "rt-multi-thread"] }
 toml = "0.5"
 xdg = "2.4"
